# Verda

./: .env.example  .gitignore  ARCHITECTURE.md  IMPROVEMENTS.md  IRIS_GUIDE.md  PITCH.md  PROJECT_MEMORY.md  README.md  ROADMAP.md  SESSION_HANDOFF.md  claude.md
services/hypothesis-room/: .env.example  .gitignore  ARCHITECTURE.md  CONFIG_SETUP.md  LLM_PROVIDERS.md  README.md  pyproject.toml
services/hypothesis-room/hypo-gpt/: .env.example  README.md  config.py  models.py  pipeline.py  pyproject.toml  server.py
services/hypothesis-room/hypo-gpt/src/hypo_gpt/: __init__.py  __main__.py  config.py  graph.py  models.py  pipeline.py  server.py
services/hypothesis-room/hypo-gpt/src/hypo_gpt/agents/: __init__.py  cartographer.py  external_grounding.py  extractor.py  generators.py  judges.py  memory.py  portfolio.py  tribunal.py
services/hypothesis-room/hypo-gpt/src/hypo_gpt/assessment/: __init__.py  assessment_agent.py
services/hypothesis-room/hypo-gpt/tests/: conftest.py  test_dedup_determinism.py  test_external_grounding.py  test_extractor_domain.py  test_layer4_panel.py  test_layer5_layer6.py  test_mcgs_rules.py  test_models.py  test_pipeline.py  test_server.py  test_strategy_builders.py
services/hypothesis-room/hypo_claude/: .env.example  __init__.py  __main__.py  config.py  models.py  pipeline.py  pyproject.toml  server.py
services/hypothesis-room/hypo_claude/agents/: __init__.py  cartographer.py  deep_research.py  evolver.py  extractor.py  generators.py  judges.py  portfolio.py  tribunal.py
services/hypothesis-room/hypo_claude/layers/: __init__.py  layer0_intelligence.py  layer1_cartography.py  layer2_generation.py  layer3_tribunal.py  layer4_evaluation.py  layer5_portfolio.py  output.py
services/hypothesis-room/hypo_claude/llm/: __init__.py  provider.py
services/hypothesis-room/hypo_claude/llm/prompts/: __init__.py  cartography.py  intelligence.py  judges.py  portfolio.py  strategies.py  tribunal.py
services/hypothesis-room/hypo_claude/tests/: conftest.py  test_models.py
services/hypothesis-room/iris/: .env.example  app.py  pyproject.toml  requirements.txt  server_wrapper.py  setup.sh
services/hypothesis-room/iris/config/: config.yaml
services/hypothesis-room/iris/src/agents/: ideation.py  prompts.py  review.py  structured_review.py
services/hypothesis-room/iris/src/mcts/: node.py
services/hypothesis-room/iris/src/retrieval_api/: pyproject.toml  sample.py
services/hypothesis-room/iris/static/js/: app.js
services/hypothesis-room/iris/templates/: index.html
services/hypothesis-room/shared/: __init__.py  cache.py  dedup.py  embedding.py  llm_provider.py  memory_store.py  pdf.py  rate_limiter.py  serialization.py  vector_store.py
services/hypothesis-room/src/vreda_hypothesis/: __init__.py  __main__.py  config.py  main.py  models.py  runtime.py  server.py
services/hypothesis-room/src/vreda_hypothesis/agents/: __init__.py
services/hypothesis-room/src/vreda_hypothesis/knowledge/: __init__.py  graph.py  vector_store.py
services/hypothesis-room/src/vreda_hypothesis/llm/: __init__.py  provider.py
services/hypothesis-room/src/vreda_hypothesis/stages/: __init__.py  filtering.py  grounding.py  ingestion.py  output.py  overgeneration.py  portfolio_audit.py  refinement.py  tournament.py
services/hypothesis-room/src/vreda_hypothesis/utils/: __init__.py  cache.py  cost.py  dedup.py  elo.py  rate_limiter.py
services/hypothesis-room/tests/: conftest.py  test_agents.py  test_external_openai_web_search.py  test_ingestion_chunking.py  test_knowledge_graph.py  test_models.py  test_server.py  test_shared_cache.py  test_shared_external_clients.py  test_shared_vector_store.py  test_stage_filtering.py  test_stage_grounding.py  test_stage_ingestion.py  test_stage_output.py  test_stage_overgeneration.py  test_stage_refinement.py  test_stage_tournament.py  test_utils_cost.py  test_utils_dedup.py  test_utils_elo.py  test_vector_store.py
(+232 files in other folders)
