[project]
name = "iris-interactive-research-ideation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyascii>=0.3.2",
    "pymupdf>=1.26.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "frontend>=0.0.3",
    "langsmith==0.1.140",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "retry>=0.9.2",
    "tenacity>=8.2.3",
    "tools>=0.1.9",
]
